--- a/styles.css
+++ b/styles.css
@@ -58,10 +58,10 @@ body {
   color: red;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 800px) {
   .section1 {
     text-align: center;
-    height: 135%;
+    height: 100%;
     width: 100%;
     padding: 1% 7%;
   }
@@ -77,14 +77,17 @@ body {
     background-color: #f0dbaf;
     color: #363062;
     font-family: "Anton", sans-serif;
-    width: 28%;
-    height: 6%;
+    width: 30%;
+    height: 8%;
     border-radius: 5%;
-    margin: 1% 2% 1%;
+    margin: 1% 2% 3%;
     font-size: 2rem;
   }
+  .dice {
+    display: block;
+  }
   .image-res {
-    width: 30%;
+    width: 20%;
     height: 10%;
   }
 }
